C# sources available at configure time

--- a/lib/mylib/src/CMakeLists.txt
+++ b/lib/mylib/src/CMakeLists.txt
@@ -1,8 +1,12 @@
-add_library(swiglib
+set(target_name mylib)
+
+add_library(${target_name}
 	myclass.hxx
 	myclass.cxx
 )
-target_include_directories(swiglib
+target_include_directories(${target_name}
 	INTERFACE
 		${CMAKE_CURRENT_LIST_DIR}
 )
+
+include(bind.cmake)
