--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,5 @@
+cmake_minimum_required(VERSION 3.20)
 project(SWIGTesting LANGUAGES C CXX CSharp)
 
 add_subdirectory(lib)
-add_subdirectory(bind)
+add_subdirectory(src)
