adds C-linkable api

--- a/lib/mylib/src/CMakeLists.txt
+++ b/lib/mylib/src/CMakeLists.txt
@@ -3,6 +3,8 @@ set(target_name mylib)
 add_library(${target_name}
 	myclass.hxx
 	myclass.cxx
+	api.hxx
+	api.cxx
 )
 target_include_directories(${target_name}
 	INTERFACE
