--- a/lib/mylib/test/CMakeLists.txt
+++ b/lib/mylib/test/CMakeLists.txt
@@ -3,8 +3,8 @@ include(GoogleTest)
 set(target_name test_mylib)
 
 add_executable(${target_name}
-	test_api.cxx
 	test_myclass.cxx
+	test_api.cxx
 )
 target_link_libraries(${target_name}
 	PRIVATE
@@ -16,8 +16,10 @@ set_target_properties(${target_name}
 		RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin
 )
 
-gtest_discover_tests(${target_name})
+gtest_discover_tests(${target_name}
+	TEST_PREFIX mylib.
+)
 
 add_custom_command(TARGET ${target_name} POST_BUILD
-	COMMAND ${CMAKE_CTEST_COMMAND} -C $<CONFIG> --rerun-failed --output-on-failure
+	COMMAND ${CMAKE_CTEST_COMMAND} -C $<CONFIG> --output-on-failure
 )
